--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,141 @@
-<html>
-    <header>
-        <title>PDV Finder</title>
-    </header>
-    <body>
-        <p>Find the nearest PDV</p>
-    </body>
+<!doctype html>
+
+<html ng-app="pdvManager">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Cadê o PDV?</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
+        crossorigin="anonymous">
+    <style>
+        html {
+            overflow-y: scroll;
+        }
+
+        body {
+            padding-top: 50px;
+        }
+
+        .top-buffer {
+            margin-top: 20px;
+        }
+    </style>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
+        crossorigin="anonymous"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>
+    <script src="controller.js"></script>
+</head>
+
+<body ng-controller="mainController">
+    <div class="container">
+        <div class="jumbotron text-center">
+            <h2>Cadê o PDV?</h2>
+        </div>
+        <div id="accordion" role="tablist">
+            <div class="card">
+                <div class="card-header" role="tab" id="headingOne">
+                    <h5 class="mb-0">
+                        <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                Quero buscar um ponto de venda
+                                  </a>
+                    </h5>
+                </div>
+                <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
+                    <div class="card-body">
+
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <label for="find-by-id">Buscar pelo ID</label>
+                                <div class="input-group">
+                                    <input type="text" class="form-control" id="find-by-id" placeholder="Busque o PDV com esse ID pra mim" aria-label="Busque o PDV pra mim"
+                                        ng-model="input.pdvId">
+                                    <span class="input-group-btn">
+                                    <button class="btn btn-secondary" type="button" ng-click="findById(input.pdvId)">Buscar</button>
+                                </span>
+                                </div>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="row top-buffer">
+                            <div class="col-lg-12">
+                                <label for="inlineFormLatitude">Buscar o mais próximo que atenda a localização</label>
+                                <form class="form-inline">
+
+                                    <label class="sr-only" for="inlineFormInputGroupLongitude">Longitude</label>
+                                    <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+                                        <div class="input-group-addon">longitude</div>
+                                        <input type="text" class="form-control" id="inlineFormInputGroupLongitude" placeholder="" ng-model="queryParameters.longitude">
+                                    </div>
+
+                                    <label class="sr-only" for="inlineFormLatitude">Latitude</label>
+                                    <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+                                        <div class="input-group-addon">latitude</div>
+                                        <input type="text" class="form-control" id="inlineFormLatitude" placeholder="" ng-model="queryParameters.latitude">
+                                    </div>
+
+                                    <button type="submit" class="btn btn-secondary btn-sm" ng-click="findByAddressAndCoverage()">Buscar</button>
+                                </form>
+                            </div>
+                        </div>
+
+                        <div class="card top-buffer">
+                            <div class="card-header">Detalhes do ponto de venda</div>
+                            <div class="card-body">
+                                <p>id: {{ pdv.id }}</p>
+                                <p>tradingName: {{ pdv.tradingName }}</p>
+                                <p>ownerName: {{ pdv.ownerName }}</p>
+                                <p>document: {{ pdv.document }} </p>
+                                <p>coverageArea.type: {{ pdv.coverageArea.type }} </p>
+                                <p>coverageArea.coordinates: {{ pdv.coverageArea.coordinates }} </p>
+                                <p>address.type: {{ pdv.address.type }} </p>
+                                <p>address.coordinates: {{ pdv.address.coordinates }} </p>
+                                <br />
+                                <p>
+                                    <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseJSON" aria-expanded="false" aria-controls="collapseJSON">Exibir JSON</button>
+                                </p>
+                                <div class="collapse" id="collapseJSON">
+                                    <div class="card card-body">{{ pdv }}</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header" role="tab" id="headingTwo">
+                    <h5 class="mb-0">
+                        <a class="collapsed" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Quero incluir um ponto de venda
+                        </a>
+                    </h5>
+                </div>
+                <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion">
+                    <div class="card-body">
+                        <div class="alert alert-success" role="alert" ng-show="showPdvSuccess">
+                            PDV inserido com sucesso.
+                        </div>
+                        <div class="alert alert-danger" role="alert" ng-show="showPdvAlert">
+                            Erro ao inserir PDV.
+                        </div>
+                        <form>
+                            <div class="form-group">
+                                <label for="formAddPdvTextArea">Cole aqui o JSON para incluir um novo PDV</label>
+                                <textarea class="form-control" id="formAddPdvTextArea" rows="25" ng-model="inputPdvJSON"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary" ng-click="addPdv()">Adicionar</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+</body>
+
 </html>
